src/objects/Platform__c.object
<CustomObject>
    <fields>
        <fullName>CostStructures__c</fullName>
        <label>Cost Structure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPAC</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPE</fullName>
                </value>
                <value>
                    <fullName>CPER</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPLC</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPPL</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CPSU</fullName>
                </value>
                <value>
                    <fullName>CPV</fullName>
                </value>
                <value>
                    <fullName>CPLP</fullName>
                </value>
                <value>
                    <fullName>CPCO</fullName>
                </value>
                <value>
                    <fullName>CPVC</fullName>
                </value>
                <value>
                    <fullName>CPDPV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdWords</fullName>
                </value>
                <value>
                    <fullName>DBM</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Pinterest</fullName>
                </value>
                <value>
                    <fullName>Snapchat</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>TikTok</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Platform type</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YT</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Platform</label>
    <listViews>
        <fullName>AdWords</fullName>
        <columns>NAME</columns>
        <columns>Prefix__c</columns>
        <columns>CostStructures__c</columns>
        <columns>Type__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider__c</field>
            <operation>equals</operation>
            <value>AdWords</value>
        </filters>
        <label>AdWords</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prefix__c</columns>
        <columns>CostStructures__c</columns>
        <columns>Type__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DBM</fullName>
        <columns>NAME</columns>
        <columns>Prefix__c</columns>
        <columns>CostStructures__c</columns>
        <columns>Type__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider__c</field>
            <operation>equals</operation>
            <value>DBM</value>
        </filters>
        <label>DBM</label>
    </listViews>
    <listViews>
        <fullName>Facebook</fullName>
        <columns>NAME</columns>
        <columns>Prefix__c</columns>
        <columns>CostStructures__c</columns>
        <columns>Type__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider__c</field>
            <operation>equals</operation>
            <value>Facebook</value>
        </filters>
        <label>Facebook</label>
    </listViews>
    <nameField>
        <label>Platform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>